--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -30,6 +30,7 @@
                                     <a href="/product/<%= product.id %>" class="btn">Detailes</a>
                                     <form action="/add-to-cart" method="POST">
                                         <button class="btn">Add to Cart</button>
+                                        <input type="hidden" name="productId" value=<%= product.id%>>
                                     </form>
                                 </div>
                             </article>
