Added db operations

--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -27,8 +27,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/product/<%= product.id %>" class="btn">Detailes</a>
-                                    <form action="/add-to-cart" method="POST">
+                                    <form action="/add-to-cart" method="get">
+                                        <a href="/product/<%= product.id %>" class="btn">Detailes</a>
                                         <button class="btn">Add to Cart</button>
                                         <input type="hidden" name="productId" value=<%= product.id%>>
                                     </form>
