--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,8 +11,9 @@
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="post">
+            <form action="/cart" method="POST">
                 <button class="btn" type="submit">Add to Cart</button>
+                
                 
             </form>
         </main>
